test/runtime-integration-tests/TestPrograms/Syntax/Invalid/alias_no_scheme.5th
alias X as ://example;
main(): int { return 0; }
